<resources>
    <string name="app_name">Traffic laws exam</string>
    <string name="start_exam">Start exam</string>
    <string name="all_questions">All questions</string>
    <string name="statistics">Statistics</string>
    <string name="submit_button">Submit</string>
    <string name="title_exam_question">Question (%1$d/%2$d)</string>
    <string name="additional_questions_notifying">+%1$d questions for mistakes</string>
    <string name="my_answers_button">My answers</string>
    <string name="pass_again_button">Pass again</string>
    <string name="congratulations_text">Congratulations! The exam is passed</string>
    <string name="failed_text">The exam failed. Try again!</string>
    <string name="title_results">Results</string>
    <string name="next_answer_button">Next</string>
    <string name="previous_answer_button">Previous</string>
    <string name="learned_questions_number">Learned questions number:</string>
    <string name="all_questions_number">All questions number:</string>
    <string name="learning_progress">Learning progress:</string>

</resources>