<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_header_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/traffic_laws" />

        <Button
            android:id="@+id/allQuestionsButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/all_questions"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/titleImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/statisticsButton" />

        <Button
            android:id="@+id/statisticsButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/statistics"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/allQuestionsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/startButton" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/start_exam"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/statisticsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>