<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.GameWonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/examPassedConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/examFailedBackground">


        <TextView
            android:id="@+id/congratulationsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/question_horizontal_margin"
            android:layout_marginEnd="@dimen/question_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/failed_text"
            android:textSize="@dimen/question_text_size"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/youWinImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/youWinImage"
            android:layout_width="0dp"
            android:layout_height="@dimen/exam_finished_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/exam_failed" />

        <Button
            android:id="@+id/myAnswersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:layout_marginTop="30dp"
            android:text="@string/my_answers_button"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/passAgainButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youWinImage" />

        <Button
            android:id="@+id/passAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:layout_marginBottom="30dp"
            android:text="@string/pass_again_button"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myAnswersButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>